2010-07-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: User domain handling improvements.
	Match gnustep-make in allowing absolute paths to be specified for the
	user domain directories rather than always treating user domain paths
	as being within the user's home directory.
	Also, add support for simple field substitution into the path:
	'%u' --> user name
	'%i' --> user id
	'%%' --> '%'
	* Documentation/Base.gsdoc: Document the new behavior.

2010-07-19  Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Additions/GNUstepBase/GSConfig.h: Define GS_USE_ICU when
	  the configure script indicates libicu availablity.
	* Headers/Foundation/Foundation.h: Import NSLocale.h
	* Source/NSLocale.m: Change tests to use GS_USE_ICU.
	Make sure that the parts of NSLocale relying on ICU actually get built
	when libicu is available.

2010-07-17  Quentin Mathe <quentin.mathe@gmail.com>

	* Tools/autogsdoc.m:
	* Tools/AGSParser.m:
	Added the ability to generate paragraph markup. Turned off by default.
	For each paragraph break ('\n\n' sequence) and when no incompatible 
	elements exist in the scanned paragraph, <p> tags can be automatically 
	inserted (more explanations in -canWrapWithParagraphMarkup: doc).

2010-07-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSNetServices.h:
	* Source/GSAvahiClient.h:
	* Source/GSNetServices.h:
	* Source/GSAvahiNetService.m:
	Attempt to get ahavi code working without breaking ABI.

2010-07-13 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSNetServices.h: Update to a version working with
	both mDNSResponder and Avahi.
	* Source/GSAvahiNetService.m: Fix leftover duplicate variables.
	* Source/GSNetServices.h: Revert to r30954, but add padding ivars to
	the Avahi classes.
	Make Avahi-NSNetServices work again.

2010-07-13 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSNetServices.m: Replace with the new version.
	* Source/GSNetServices.h: Add missing header.